# django-privates

./: .bumpversion.cfg  .editorconfig  .gitignore  .readthedocs.yml  .travis.yml  Changelog.rst  LICENSE  MANIFEST.in  README.rst  manage.py  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml  code_quality.yml
docs/: Makefile  changelog.rst  conf.py  examples.rst  index.rst  make.bat  quickstart.rst  reference.rst
privates/: __init__.py  admin.py  apps.py  checks.py  fields.py  storages.py  test.py  utils.py  views.py  widgets.py
privates/templates/admin/widgets/: clearable_private_file_input.html
testapp/: admin.py  models.py  settings.py
testapp/migrations/: 0001_initial.py  0002_imagefield.py  0003_file2.py  0004_file3_file4.py  0005_alter_file_file_alter_file_image.py  0005_cachemodel.py
tests/: conftest.py  test_admin.py  test_checks.py  test_modelfield.py  test_storage.py  test_testing_tools.py
