# setuptools config
# see http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = django-privates
version = 0.1
description = Batteries included private media integration in Django
long_description = file: README.rst
url = https://github.com/sergei-maertens/django-privates
license =
author = Sergei Maertens
author_email = info@regex-it.nl
keywords = django, media, private, storage
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Django
    Framework :: Django :: 1.11
    Framework :: Django :: 2.0
    Intended Audience :: Developers
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    django
    django-sendfile2
tests_require =
    pytest
    pytest-pythonpath
    pytest-django
    tox
    isort

[options.extras_require]
tests =
    pytest
    pytest-pythonpath
    pytest-django
    tox
    isort
pep8 = flake8
coverage = pytest-cov
docs =
    sphinx
    sphinx-rtd-theme
release = zest.releaser

# 3rd party configuration

[aliases]
test=pytest

[bdist_wheel]
universal = 1

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = false
line_length = 79
multi_line_output = 5
skip = env,.tox,.history,.eggs
skip_glob = */migrations/*
not_skip = __init__.py
known_django=django
known_first_party=privates
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[tool:pytest]
testpaths = tests
DJANGO_SETTINGS_MODULE=testapp.settings

[coverage:run]
branch = True
source = privates
omit =
    */migrations/*
   testapp/*
    tests/*

[pep8]
max-line-length=119
exclude=env,.tox,doc

[flake8]
max-line-length=119
exclude=env,.tox,doc

[zest.releaser]
create-wheel = True

[distutils]
index-servers = pypi
