# setuptools config
# see http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = django-privates
version = 2.0.0-post0
description = Simple private media integration for Django
long_description = file: README.rst
url = https://github.com/sergei-maertens/django-privates
license =
author = Sergei Maertens
author_email = info@regex-it.nl
keywords = django, media, private, storage
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    django >= 3.2
    django-sendfile2 > 0.5
tests_require =
    Pillow
    pytest
    pytest-pythonpath
    pytest-django
    tox
    pyquery
    isort
    black
    django-stubs[compatible-mypy]

[options.extras_require]
tests =
    Pillow
    pytest
    pytest-pythonpath
    pytest-django
    tox
    pyquery
    isort
    black
    django-stubs[compatible-mypy]
pep8 = flake8
coverage = pytest-cov
docs =
    sphinx
    sphinx-rtd-theme
release =
    twine
    bump2version

[options.packages.find]
include =
    privates
    privates.*
exclude =
    tests
    tests.*
    testapp
    testapp.*

# 3rd party configuration

[aliases]
test=pytest

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
line_length = 88
multi_line_output = 3
skip = env,.tox,.history,.eggs
skip_glob = */migrations/*
known_django=django
known_first_party=privates
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[tool:pytest]
testpaths = tests
DJANGO_SETTINGS_MODULE=testapp.settings
junit_family=xunit1

[coverage:run]
branch = True
source = privates
omit =
    */migrations/*
   testapp/*
    tests/*

[pep8]
max-line-length=119
exclude=env,.tox,doc

[flake8]
max-line-length=119
exclude=env,.tox,doc

[mypy]
plugins =
    mypy_django_plugin.main

[mypy.plugins.django-stubs]
django_settings_module = "testapp.settings"

[mypy-django_sendfile]
ignore_missing_imports = True
